Fixed tabbed pane vertical scrollbar when content exceeds window height

--- a/css/index.css
+++ b/css/index.css
@@ -23,6 +23,7 @@ html, body {
   width: 20%;
   min-width: 300px;
   float: left;
+  overflow: auto;
 }
 
 #simulationContainer {
